Chaanging Banner Color

--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -24,7 +24,7 @@ html, body {
 
 /*---------------Banner-----------------*/
 .banner {
-    background-color: #78866b;
+    background-color: #808000;
     padding: 28px;
     text-align: center;
 }
