--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -42,7 +42,7 @@ html, body {
     min-height: 100%;
     width: 10%;
     min-width: 200px;
-    background-color: #19FF80;
+    background-color: #5f6000;
     overflow: hidden;
 }
 
