--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 * {
     margin: 0;    
-    font-family: BndyYlwHS, sans-serif;
+    font-family: Animated, sans-serif;
     color: black
 }
 
