--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -49,7 +49,7 @@ html, body {
     background-color: #5f6000;
     overflow: hidden;
     border: 10px;
-    margin: 10px;
+    border: 10px;
 }
 
 .sidebar .container {
