--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -32,6 +32,7 @@ html, body {
     text-align: center;
     height: 10%;
     width: 100%;
+    margin: 0px;
 }
 .banner .container h1{
     font-family: "MilitaryFont", sans-serif;
