--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -191,6 +191,7 @@ div.sidebar2 a {
 .homePageImage {
     height: cover;
     width: cover;
+    overflow: hidden;align-content: center;
 }
 
 /*Paragraph that goes below pictures*/
