--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -191,7 +191,7 @@ div.sidebar2 a {
 .homePageImage {
     height: cover;
     width: cover;
-    overflow: hidden;align-content: center;
+    overflow: hidden;
 }
 
 /*Paragraph that goes below pictures*/
