--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -46,7 +46,7 @@ html, body {
     height: 100%;
     min-height: 100%;
     width: 10%;
-    min-width: 100px;
+    min-width: 200px;
     background-color: #5f6000;
     overflow: hidden;
     border-left: 10px;
@@ -105,6 +105,7 @@ div.sidebar2 a {
 .content { /*Div containing all of the content (Not the nav bar or banner)*/
     float: right;
     margin: 0px;
+    width: 80%;
     color: black;
     
 }
