--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -74,7 +74,7 @@ div.sidebar2 {
     height: 100%;
     min-height: 100%;
     width: 10%;
-    min-width: 200px;
+    /*min-width: 200px;*/
     background-color: #19FF80;
     overflow: hidden;
 }
