--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -192,6 +192,7 @@ div.sidebar2 a {
     height: 100%;
     width: 150%;
     overflow: hidden;
+    align-items: stretch;
 }
 
 /*Paragraph that goes below pictures*/
