--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -190,7 +190,7 @@ div.sidebar2 a {
 /*Individual image properties*/
 .homePageImage {
     height: 100%;
-    width: 100%;
+    width: cover%;
     overflow: hidden;
 }
 
