--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -189,8 +189,8 @@ div.sidebar2 a {
 }
 /*Individual image properties*/
 .homePageImage {
-    height: cover;
-    width: 137%;
+    height: 100%;
+    width: 100%;
     overflow: hidden;
 }
 
