--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -39,7 +39,7 @@ html, body {
 .sidebar {
     position: absolute;
     float: left;
-    height: 100%;
+    height: 120%;
     min-height: 100%;
     width: 10%;
     min-width: 200px;
@@ -190,7 +190,7 @@ div.sidebar2 a {
 .homePageImage {
     height: 110%;
     width: 145%;
-
+    overflow: hidden;
 }
 
 /*Paragraph that goes below pictures*/
