--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -100,7 +100,7 @@ div.sidebar2 a {
 }
 /*-----------Page Content-----------------*/
 .content { /*Div containing all of the content (Not the nav bar or banner)*/
-    float: right;
+    float: left;
     margin: 0px;
     width: 80%;
     color: black;
