--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -39,7 +39,7 @@ html, body {
 .sidebar {
     position: absolute;
     float: left;
-    height: cover;
+    height: 100%;
     min-height: cover;
     width: 10%;
     min-width: 200px;
