--- a/Stylesheets/stylesheet.css
+++ b/Stylesheets/stylesheet.css
@@ -162,7 +162,7 @@ div.sidebar2 a {
     background-color: #0D7F40;
     clear: both;
     width: 100%;
-    font-family: "Black Ops One"
+    font-family: "Black Ops One";
 }
 
 .footer .container {
